RESOLVED FIXED258734
REGRESSION(265569@main): All path segments should be coded by StreamConnectionEncoder
https://bugs.webkit.org/show_bug.cgi?id=258734
Summary REGRESSION(265569@main): All path segments should be coded by StreamConnectio...
Said Abou-Hallawa
Reported 2023-06-30 08:30:23 PDT
After 265569@main, the composite path segments, such as PathDataLine, became decodable by IPC coders only. We need to add StreamConnectionEncoder as additional coder for encoding and decoding them. The reason for this change in 265569@main, was the serialization.in files do not know hot to deal with template struct/class. These composite path segments are defined as templates for two types. So the encoding/decoding code was implemented in WebCoreArgumentCoders.h. This caused a perf regression in MotionMark CanvasLines subtest.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-30 08:30:45 PDT
Said Abou-Hallawa
Comment 2 2023-06-30 09:15:58 PDT
EWS
Comment 3 2023-06-30 19:27:22 PDT
Committed 265680@main (7dc4e7c7d38b): <https://commits.webkit.org/265680@main> Reviewed commits have been landed. Closing PR #15451 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.