REGRESSION(265569@main): All path segments should be coded by StreamConnectionEncoder https://bugs.webkit.org/show_bug.cgi?id=258734 rdar://111570644

Reviewed by Wenson Hsieh.

Detemplatize the composite path segments. Add StreamConnectionEncoder as additional
encoder for these structures. This should recover part of the CanvasLines regression
which was caused by 265569@main.

* Source/WebCore/platform/graphics/PathSegmentData.cpp:
(WebCore::calculateArcToEndPoint):
(WebCore::PathArcTo::calculateEndPoint const):
(WebCore::PathArcTo::extendBoundingRect const):
(WebCore::PathDataLine::calculateEndPoint const):
(WebCore::PathDataLine::extendFastBoundingRect const):
(WebCore::PathDataLine::extendBoundingRect const):
(WebCore::PathDataLine::addToImpl const):
(WebCore::PathDataLine::applyElements const):
(WebCore::operator<<):
(WebCore::PathDataQuadCurve::calculateEndPoint const):
(WebCore::PathDataQuadCurve::extendFastBoundingRect const):
(WebCore::PathDataQuadCurve::extendBoundingRect const):
(WebCore::PathDataQuadCurve::addToImpl const):
(WebCore::PathDataQuadCurve::applyElements const):
(WebCore::PathDataBezierCurve::calculateEndPoint const):
(WebCore::PathDataBezierCurve::extendFastBoundingRect const):
(WebCore::PathDataBezierCurve::extendBoundingRect const):
(WebCore::PathDataBezierCurve::addToImpl const):
(WebCore::PathDataBezierCurve::applyElements const):
(WebCore::PathDataArc::calculateEndPoint const):
(WebCore::PathDataArc::extendFastBoundingRect const):
(WebCore::PathDataArc::extendBoundingRect const):
(WebCore::PathDataArc::addToImpl const):
(WebCore::DataType2>::calculateEndPoint const): Deleted.
(WebCore::DataType2>::extendFastBoundingRect const): Deleted.
(WebCore::DataType2>::extendBoundingRect const): Deleted.
(WebCore::DataType2>::addToImpl const): Deleted.
(WebCore::DataType2>::applyElements const): Deleted.
* Source/WebCore/platform/graphics/PathSegmentData.h:
(WebCore::PathDataArc::applyElements const):
(WebCore::operator<<): Deleted.
* Source/WebCore/platform/graphics/PathStream.cpp:
(WebCore::PathStream::lastIfMoveTo const):
(WebCore::PathStream::addLineTo):
(WebCore::PathStream::addQuadCurveTo):
(WebCore::PathStream::addBezierCurveTo):
(WebCore::PathStream::addArcTo):
(WebCore::PathStream::mergeIntoComposite): Deleted.
* Source/WebCore/platform/graphics/PathStream.h:
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::strokePath):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:
(WebCore::DisplayList::StrokeLine::StrokeLine):
* Source/WebKit/GPUProcess/graphics/PathSegment.serialization.in:
* Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in:
* Source/WebKit/Shared/WebCoreArgumentCoders.h:
(): Deleted.
* Tools/TestWebKitAPI/Tests/WebCore/DisplayListTests.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/265680@main